--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.15",
+    "better-sqlite3": "^12.2.0",
     "express": "^5.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
+    "@types/better-sqlite3": "^7.6.13",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
