Use docker compose, env var for API URL, cors, all of this needed for the frontend to reach the backend when running in docker

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,11 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
+
+# Accept build arg and set as env
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 RUN npm run build
 
 # Serve the build with a lightweight web server
