--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.15",
     "better-sqlite3": "^12.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.31.0",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
