--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run --reporter=verbose",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -27,11 +27,14 @@
     "@eslint/js": "^9.31.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
-    "typescript-eslint": "^8.38.0"
+    "supertest": "^7.1.4",
+    "typescript-eslint": "^8.38.0",
+    "vitest": "^3.2.4"
   }
 }
